--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -22,7 +23,7 @@
       crossorigin="anonymous"
     />
 
-    <title>React App</title>
+    <title>BeSmart Indonesia Gemilang</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
